# purecortexai

./: .env.example  .gitignore  BRAND_STRATEGY.md  CHANGELOG.md  CONNECTIVITY.md  CORTEX_INIT.md  CURSOR_MIGRATION.md  ConsensusOrchestrator.py  DEPLOYMENT.md  LICENSE  PureCortex_Master_Context.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SESSION_LOG.md  SPECIFICATION.md  TECHNICAL_ROADMAP.md  VERIFICATION_CERTIFICATE.md  check_purecortex_status.py  deployment.testnet.json  docker-compose.yml  generate_protocol_config.py  nginx.conf  register_purecortex.py  search_purecortex_moltbook.py  whoIam.md
backend/: .dockerignore  Dockerfile  Dockerfile.signer  audit_social_activity.py  delete_tweets.py  generate_assets.py  generate_hardened_assets.py  main.py  mcp_server.py  orchestrator.py  requirements-signer.txt  requirements.txt  sandboxing.py  social.py  twitter_setup.py  twitter_setup_v2.py
branding/: BRAND_MANUAL.md  brand_manual.rtf
cli/: README.md  pcx.py  pyproject.toml
contracts/: TESTNET_SMOKE.md  generate_secure_account.py  pyproject.toml
contracts/.algokit/: .copier-answers.yml
contracts/smart_contracts/agent_factory/: AgentFactory.approval.puya.map  AgentFactory.approval.teal  contract.py  deploy_config.py
contracts/smart_contracts/artifacts/agent_factory/: AgentFactory.approval.puya.map  AgentFactory.approval.teal  AgentFactory.arc56.json  agent_factory_client.py
contracts/smart_contracts/artifacts/governance/: GovernanceContract.approval.puya.map  GovernanceContract.approval.teal  governance_contract_client.py
contracts/smart_contracts/artifacts/sovereign_treasury/: SovereignTreasury.approval.puya.map  SovereignTreasury.approval.teal  sovereign_treasury_client.py
contracts/smart_contracts/artifacts/staking/: VeCortexStaking.approval.puya.map  VeCortexStaking.approval.teal  ve_cortex_staking_client.py
contracts/smart_contracts/governance/: GovernanceContract.approval.puya.map  GovernanceContract.approval.teal  contract.py  deploy_config.py
contracts/smart_contracts/sovereign_treasury/: SovereignTreasury.approval.puya.map  contract.py  deploy_config.py
contracts/smart_contracts/staking/: VeCortexStaking.approval.puya.map  contract.py  deploy_config.py
contracts/tests/: live_testnet_verify.py  test_agent_factory.py  test_governance_contract.py  test_sovereign_treasury.py  test_staking_contract.py
docs/: ADMIN_APPLICATION_MANUAL.md  API.md  CLI.md  CORRECTED_TESTNET_REDEPLOY_PLAN.md  ENTERPRISE_DEVELOPER_ACCESS_SPEC.md  MCP.md  REPO_PUBLIC_ANNOUNCEMENT_DRAFT.md
docs-site/: architecture.mdx  introduction.mdx  mint.json  openapi.json  quickstart.mdx
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
scripts/: deploy_remote_vm.sh  deploy_vm.sh  run_admin_e2e_smoke.sh  sync_runtime_env.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/purecortex_sdk/: __init__.py  client.py
(+187 files in other folders)
