[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purecortex-cli"
version = "0.6.0"
description = "PureCortex Command Line Interface — Interact with sovereign AI agents on Algorand"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "PureCortex", email = "hello@purecortex.ai"}]

dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "algosdk>=2.6.0",
    "websockets>=12.0",
]

[project.scripts]
pcx = "pcx:app"

[project.urls]
Homepage = "https://purecortex.ai"
Documentation = "https://purecortex.ai/docs/cli"
Repository = "https://github.com/chaosoracleforall-agent/purecortexai"
