[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purecortex-sdk"
version = "0.1.0"
description = "Official Python SDK for the PURECORTEX API and chat session workflow."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "PURECORTEX", email = "hello@purecortex.ai"}]
dependencies = [
    "httpx",
    "websockets",
]

[project.urls]
Homepage = "https://purecortex.ai"
Documentation = "https://purecortex.ai/docs/sdk"
Repository = "https://github.com/chaosoracleforall-agent/purecortexai"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
purecortex_sdk = ["py.typed"]
